--- a/orders.html
+++ b/orders.html
@@ -5,28 +5,41 @@
     <title>Список заявок</title>
 </head>
 <body>
+    <a href="create.html">Создание заявки</a>
+    <a href="orders.html">Список заявок</a>
+    <a href="update.html">Обновление заявки</a>
+    <input id="search"/>
+    <button onclick="GetFilter()">Найти</button>
     <table>
-      <tr>
-        <th>Номер заявки</th>
-        <th>Дата добавления</th>
-        <th>Оборудование</th>
-        <th>Тип неисправности</th>
-        <th>Описание проблемы</th>
-        <th>Клиент</th>
-        <th>Статус</th>
-        <th>Мастер</th>
-      </tr>
+        <thead>
+            <tr>
+            <th>Номер заявки</th>
+            <th>Дата добавления</th>
+            <th>Оборудование</th>
+            <th>Тип неисправности</th>
+            <th>Описание проблемы</th>
+            <th>Клиент</th>
+            <th>Статус</th>
+            <th>Мастер</th>
+          </tr>
+        </thead>
+      <tbody>
+
+      </tbody>
     </table>
     <script>
-      let table = document.querySelector("table");
+      let table = document.querySelector("tbody");
+
       GetOrders()
-      async function GetOrders() {
-        let response = await fetch("http://127.0.0.1:8000/orders").then(data => data.json())
-        if (response.method) {
-            alert(response.message)
-        }
+
+      async function GetOrders(param = null) {
+        let response = param ?
+            await fetch(`http://127.0.0.1:8000/orders?param=${param}`).then(data => data.json()) :
+            await fetch("http://127.0.0.1:8000/orders").then(data => data.json())
+        if (response.message)
+            alert(response.message);
           response.repo.forEach(o => {
-              let tr = document.createElement("tr")
+              let tr = document.createElement("tr");
 
               tr.innerHTML = `
                 <td>${o.number}</td>
@@ -39,8 +52,13 @@
                 <td>${o.master}</td>
               `;
 
-              table.append(tr)
+              table.append(tr);
           })
+      }
+      function GetFilter() {
+          table.innerHTML = "";
+          let param = document.getElementById("search").value;
+          GetOrders(param);
       }
     </script>
 </body>
