Реализован функционал добавления комментария и отображения его в таблице заявок

--- a/orders.html
+++ b/orders.html
@@ -13,15 +13,16 @@
     <table>
         <thead>
             <tr>
-            <th>Номер заявки</th>
-            <th>Дата добавления</th>
-            <th>Оборудование</th>
-            <th>Тип неисправности</th>
-            <th>Описание проблемы</th>
-            <th>Клиент</th>
-            <th>Статус</th>
-            <th>Мастер</th>
-          </tr>
+                <th>Номер заявки</th>
+                <th>Дата добавления</th>
+                <th>Оборудование</th>
+                <th>Тип неисправности</th>
+                <th>Описание проблемы</th>
+                <th>Клиент</th>
+                <th>Статус</th>
+                <th>Мастер</th>
+                <th>Комментарий</th>
+            </tr>
         </thead>
       <tbody>
 
@@ -52,6 +53,7 @@
                 <td>${o.client}</td>
                 <td>${o.status}</td>
                 <td>${o.master}</td>
+                <td>${o.comments}</td>
               `;
 
               table.append(tr);
