--- a/update.html
+++ b/update.html
@@ -13,6 +13,7 @@
         <input required placeholder="number" type="number" name="number"/>
         <input placeholder="description" type="text" name="description"/>
         <input placeholder="master" type="text" name="master"/>
+        <input placeholder="comment" type="text" name="comment"/>
         <select name="status">
             <option></option>
             <option>Не выполнено</option>
