реализована статистика по заявкам и дата окончания работ по заявке

--- a/update.html
+++ b/update.html
@@ -18,7 +18,7 @@
             <option></option>
             <option>Не выполнено</option>
             <option>В работе</option>
-            <option>Выполнено</option>
+            <option>выполнено</option>
         </select>
         <input type="submit" value="Обновить"/>
 
