--- a/orders.html
+++ b/orders.html
@@ -8,6 +8,7 @@
     <a href="create.html">Создание заявки</a>
     <a href="orders.html">Список заявок</a>
     <a href="update.html">Обновление заявки</a>
+    <a href="stats.html">Статистика</a><br>
     <input id="search"/>
     <button onclick="GetFilter()">Найти</button>
     <table>
