--- a/update.html
+++ b/update.html
@@ -25,4 +25,9 @@
 
     </form>
 </body>
+<script>
+    if (!sessionStorage.getItem("token")){
+        window.location.href = "/auth.html";
+    }
+</script>
 </html>
