--- a/create.html
+++ b/create.html
@@ -26,4 +26,9 @@
 
     </form>
 </body>
+<script>
+    if (!sessionStorage.getItem("token")){
+        window.location.href = "/auth.html";
+    }
+</script>
 </html>
